# api-spec/openapi.yaml
@@ -302,6 +302,10 @@ components:
           type: string
           format: date
           nullable: true
+        createdAt:
+          type: string
+          format: date-time
+          nullable: true
 
     # --- Invoices ---
 
